# fastapi-with-frontend

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  database.py  docker-compose.yml  main.py  models.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: b79c8f92502b_nothing.py
routers/: financenotes.py  watchlist.py
src/finance_backend/: __init__.py  database.py  dependencies.py  main.py  models.py  schemas.py
src/finance_backend/routers/: finance_notes.py  watchlist.py
static/css/: styles.css
static/js/: app.js
templates/: home.html
